<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PreConfig">

    <!-- App Bar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appbar_preConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:navigationIcon="@drawable/back_icon"
        app:navigationContentDescription="@string/voltar"
        app:title="@string/addDisp"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/AppBar"
        android:elevation="10dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Upper Content -->
    <LinearLayout
        android:id="@+id/contentUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_preConfig"
        app:layout_constraintVertical_bias="0">

        <!-- TurnOn Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:gravity="center"
            android:text="@string/ligueCh"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/helvetica"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

        <!-- DeviceNetwork Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="@font/helvetica" />

    </LinearLayout>

    <!-- Network Animation -->
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/connect"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        android:visibility="visible"
        app:lottie_scale="0.7"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        app:layout_constraintTop_toBottomOf="@+id/contentUp"
        app:layout_constraintBottom_toTopOf="@+id/contentBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Bottom Content -->
    <LinearLayout
        android:id="@+id/contentBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <!-- WhenReady Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/quandoPronto"
            android:textColor="@color/dk_grey"
            android:textSize="18sp"
            android:fontFamily="@font/helvetica"/>

        <!-- Next Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextPreConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avancar"
            android:letterSpacing="0"
            android:fontFamily="@font/helvetica"
            android:visibility="visible"
            android:elevation="10dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:paddingVertical="12dp"
            app:cornerRadius="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>