<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".Config">

    <!-- App Bar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/config_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:navigationIcon="@drawable/back_icon"
        app:navigationContentDescription="@string/voltar"
        app:title="@string/confDisp"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/AppBar"
        android:elevation="10dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Select Label -->
    <TextView
        android:id="@+id/txtSelec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:gravity="center"
        android:text="@string/selec"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/helvetica"
        android:layout_marginTop="35dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/config_appbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Scroll -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/txtSelec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Network Container -->
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

    <!-- Loading Animation -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animLoadC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Error Container -->
    <LinearLayout
        android:id="@+id/contErro_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Error Animation -->
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animErro_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_rawRes="@raw/nocon"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            app:lottie_scale="0.7"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>

        <!-- Error Label -->
        <TextView
            android:id="@+id/erroLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/semConex"
            android:textColor="@color/dk_grey"
            android:textSize="18sp"
            android:fontFamily="@font/helvetica" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>